--- a/gb/22/3/14/n13645389.md
+++ b/gb/22/3/14/n13645389.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hlsodg3891/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>欧盟推出晶片法案 台半导体应把握机会</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2022年03月14日讯】（大纪元记者侯骏霖台湾台北报导）<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E6%AC%A7%E7%9B%9F.md#1">欧盟</a>执委会通过“<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E6%99%B6%E7%89%87%E6%B3%95%E6%A1%88.md#1">晶片法案</a>”后，预计提拨430亿欧元（约新台币1兆3,400亿元）的政府预算及私人投资，促进欧洲<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">半导体</a>产业发展，以期欧盟与各成员国在2030年以前，能够将全球半导体产值的占比，从现在的10%提高至20%。资诚14日表示，欧盟正寻求与台湾等半导体产业建立生态系，业者应以欧洲产业面发展思考，把握拓展布局的时机。</p>
-<p>资诚联合会计师事务所（PwC）全球税务服务主持会计师曾博昇指出，全球<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">半导体</a>供应链由于中美贸易战、全球政治情势、保护主义与疫情影响，逐渐改为短链，着重当地生产在地供应。</p>
+<p>【大纪元2022年03月14日讯】（大纪元记者侯骏霖台湾台北报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AC%A7%E7%9B%9F.md#1">欧盟</a>执委会通过“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%B6%E7%89%87%E6%B3%95%E6%A1%88.md#1">晶片法案</a>”后，预计提拨430亿欧元（约新台币1兆3,400亿元）的政府预算及私人投资，促进欧洲<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">半导体</a>产业发展，以期<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AC%A7%E7%9B%9F.md#1">欧盟</a>与各成员国在2030年以前，能够将全球半导体产值的占比，从现在的10%提高至20%。资诚14日表示，欧盟正寻求与台湾等半导体产业建立生态系，业者应以欧洲产业面发展思考，把握拓展布局的时机。</p>
+<p>资诚联合会计师事务所（PwC）全球税务服务主持会计师曾博昇指出，全球<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">半导体</a>供应链由于中美贸易战、全球政治情势、保护主义与疫情影响，逐渐改为短链，着重当地生产在地供应。</p>
 <p>而全球各国包括美国、日本等，纷纷提出各项补助方案，这次欧洲的晶片方案，也是在同样背景下推出，可说是近年来全球半导体产业发展的大趋势，也是近期欧洲对半导体最大的公共投资。</p>
 <p>曾博昇说，欧洲尽管在关键性半导体设备、晶圆原材料，以及先进IP设计上扮演全球半导体供应链要角，但过去却忽略整体半导体产业链的建制。他说，因为整合性不足的问题，导致欧洲晶片自给率过低。</p>
-<p>曾博昇表示，<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E6%AC%A7%E7%9B%9F.md#1">欧盟</a>目前终端应用者的市场主要有三类，第一是以云端资料运算中心为主的计算产业；第二则是包含物联网在内的通讯与网路基础设施业；第三为电子电力学应用领域及汽车等产业。</p>
+<p>曾博昇表示，欧盟目前终端应用者的市场主要有三类，第一是以云端资料运算中心为主的计算产业；第二则是包含物联网在内的通讯与网路基础设施业；第三为电子电力学应用领域及汽车等产业。</p>
 <p>欧盟本身有强健的汽车、感测器产业，对半导体晶片的需求日益增加，因此欧盟并非只是期待外国半导体业者到欧盟设厂。曾博昇认为，欧盟正在寻求与包括台湾在内的各国半导体产业深化合作，共建一个健康的产业生态系。</p>
 <p>他建议，台湾半导体产业应可趁此良机，思考如何参与、扩大自身在全球的布局，并增强产业影响力，当然欧盟补助不只是要求到当地制造，而是期待业者提出对产业面有助益的合作计划，因此投资者可从欧洲整体产业面发展的角度来思考，布局在欧洲的投资计划。</p>
 <p>责任编辑：陈玟绮</p>
@@ -18,47 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/21/11/15/n13376290.md#1">六位美参众议员访台 外交部：深化台美情谊</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/21/11/15/n13377148.md#1">访台6议员全是共和党 AIT：讨论区域安全</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/21/11/16/n13379404.md#1">欧盟推欧洲晶片法 盼2030年全球市占率倍增</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/1/12/n13499767.md#1">掌握供应链重组商机 台官员：加大国际研发合作</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/2/9/n13564578.md#1">欧盟推晶片法案 台外交部：具广大合作空间</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/2/9/n13565643.md#1">欧盟公布晶片法案 公开肯定台湾地位重要</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/14/n13645512.md#1">战争疏散近70万文物 台故宫3个月内研拟对策</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/14/n13645340.md#1">台财部推“手机报税2.0” 增编修扶养亲属功能</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/14/n13645420.md#1">俄乌战争冲击物价 台财部降税、通关齐下</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/14/n13645410.md#1">若油价大涨 台通膨率或破2.5%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/15/n13376290.md#1">六位美参众议员访台 外交部：深化台美情谊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/15/n13377148.md#1">访台6议员全是共和党 AIT：讨论区域安全</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/16/n13379404.md#1">欧盟推欧洲晶片法 盼2030年全球市占率倍增</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/12/n13499767.md#1">掌握供应链重组商机 台官员：加大国际研发合作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/9/n13564578.md#1">欧盟推晶片法案 台外交部：具广大合作空间</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/9/n13565643.md#1">欧盟公布晶片法案 公开肯定台湾地位重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678987.md#1">电价审议会今召开 立委吁涨工业大户</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678996.md#1">青年财务压力大 求职网：2成属“零存族”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678749.md#1">台积电高雄设厂通过初审 环团吁“自带绿电”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678690.md#1">俄乌战争冲击台经济成长 主计长：可保4</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757209.md#1" target="_blank">共产暴政录：红四方面军在四川杀民众百万</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398576.md#1" target="_blank">国际人权组织东亚负责人：中共是邪恶的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640407.md#1">【军事热点】美叫停波兰转让米格-29到乌克兰</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639463.md#1">【新闻看点】俄军调整部署 “大决战”风声满楼</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/13/n13643836.md#1">【神韵作品】2019 神韵交响乐《汗舞壮歌》</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639341.md#1">【更新3.11】乌克兰市长被亲俄武装人员带走</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639480.md#1">中俄联手反西方制裁？专家揭中共挺俄内幕</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13641266.md#1">【中国观察】李克强的进退</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639867.md#1">持台湾护照赴英拍节目 杜汶泽在桃园机场捐款</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13640008.md#1">熊黛林产后复出荧屏 深度入戏状态引热议</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640388.md#1">《超时空亚当计划》影评：巧遇未来的自己 成冒险开端</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/13/n13642984.md#1">曾见证大S具俊晔交往 黄子佼佩服男方这一点</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/13/n13643619.md#1">自曝曾因长相遭攻击 姚晨如今回应幽默而霸气</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/8/n13630795.md#1">比苹果含钾更高？早上喝一杯柠檬水的九大理由</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640276.md#1">36岁朱芯仪罹乳癌 一种风险最易被轻忽</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/8/n13630796.md#1">咳嗽和喉咙痛的自然食疗法</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13636807.md#1">皮肤保养不好 当心变老甚至罹癌！教你保护方法</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/9/n13633718.md#1">锌有助抗病毒、增免疫 槲皮素等营养素可促吸收</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/14/n13645389.htm">欧盟推出晶片法案 台半导体应把握机会</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/14/n13645389.htm">欧盟推出晶片法案 台半导体应把握机会</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hlsodg3891/djy/blob/master/gb/22/3/14/n13645389.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645389.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
